@@ -11,6 +11,10 @@ cupt (0.6.5) UNRELEASED; urgency=low
           include optional short and long aliases.
         - [API break] Removed 'set_short_alias_for_uri' subroutine.
         - [API break] Removed 'set_long_alias_for_uri' subroutine.
+    - System:
+      - State:
+        - Consider 'half-configured' packages as installed too, since they are
+          full-right participants of dependency and worker management.
 
  -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 02 Sep 2009 14:13:54 +0300
 
